--- a/ui/src/styles/main.css
+++ b/ui/src/styles/main.css
@@ -55,7 +55,7 @@ html.dark input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
 }
 
-html.dark .prose h1, html.dark .prose h2, html.dark .prose p { color: #fff }
+html.dark .prose h1, html.dark .prose h2, html.dark .prose p, html.dark .prose li, html.dark .prose td { color: #fff }
 html.dark .prose h3, html.dark .prose h4, html.dark .prose h5, html.dark .prose th { color: #a9c7df }
 html.dark ::-webkit-scrollbar-thumb{background-color:#313D4F}
 
